--- a/invoice/templates/invoice/base.html
+++ b/invoice/templates/invoice/base.html
@@ -21,24 +21,19 @@
 <body>
 
     {% block content %}
-    {% endblock content %}
+    {% endblock content %}  
     
 
     {% block js %}
 
-    <script id="hello-data" type="application/json">{{ appartaments }}</script>
-
-    
     <script>
-        const obj ={
-            'user': JSON.parse('{{ object_list | escapejs }}')[0].fields,
-            'appartaments': JSON.parse('{{ appartaments | escapejs }}')[0].fields,
-            'house': JSON.parse('{{ house | escapejs }}')[0].fields,
-            'city': JSON.parse('{{ city | escapejs }}')[0].fields,
-            'street': JSON.parse('{{ street | escapejs }}')[0].fields,
-            'uk': JSON.parse('{{ uk | escapejs }}')[0].fields,
-            'invoice': JSON.parse('{{ invoice | escapejs }}')[0].fields
-        }
+        const user = {{ user }};
+        const appartaments = {{ appartaments }};
+        const house = {{ house }};
+        const city = {{ city }};
+        const street = {{ street }};
+        const uk = {{ uk }};
+        const invoice = {{ invoice }};
     </script>
 
     <!-- jQuery -->
