--- a/invoice/templates/invoice/base.html
+++ b/invoice/templates/invoice/base.html
@@ -34,6 +34,7 @@
         const street = {{ street }};
         const uk = {{ uk }};
         const invoice = {{ invoice }};
+        const test = {{ test }};
     </script>
 
     <!-- jQuery -->
